- Change config option `frontend.sourcemapping.index` to `frontend.source_mapping.index_pattern` and remove adding a '*' by default.{pull}492[492].
- Add Config option for excluding stack trace frames from `grouping_key` calculation {pull}482[482]
- Expose expvar {pull}509[509]
- Add `process.ppid` as optional field {pull}564[564]

==== Deprecated

==== Known Issues



=== APM Server version 6.1
https://github.com/elastic/apm-server/compare/f9a2086ceed0b918e1a0b3d8ddc140fc21af0e74\...421db9d1e10935e7b9aec00b64cf66ad2d50d797[View commits]

==== Breaking changes
- Allow ES template index prefix to be `apm` {pull}152[152].
- Remove `git_ref` from Intake API and Elasticsearch output {pull}158[158].
- Switch to Go 1.9.2

==== Bug fixes
- Fix dashboard loading for Kibana 5x {pull}221[221].
- Fix command for loading dashboards in docs {pull}205[205].
- Log a warning message if secret token is set but ssl is not {pull}204[204].
- Fix wrong content-type in response {pull}171[171].
- Remove duplicate dashboard entries {pull}162[162].
- Remove `context.db` from `fields.yml` for consistency, has not been indexed before {pull}159[159].
- Updated systemd doc url {pull}354[354]
- Update dashboard with fix for rpm graphs {pull}315[315].
- Dashboards: Remove time from url_templates {pull}321[321].

==== Added
- Added wildcard matching for allowed origins for frontend {pull}287[287].
- Added rate limit per IP for frontend {pull}257[257].
- Allow null for all optional fields {pull}253[253].
- Make context.app.language.version optional {pull}246[246].
- CORS support for frontend {pull}244[244].
- Added support for frontend {pull}227[227].
- Show transaction.result in Requests per Minute {pull}226[226].
- Added Kibana 5.6 compatible dashboards {pull}208[208].
- Send document to output on start of server {pull}117[117].
- Log frontend status at startup  {pull}284[284].

==== Deprecated

==== Known Issues


=== APM Server version 0.2.0